<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2021 Google Inc. All Rights Reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  

  <!--
    The "fullscreen" and "fullscreen-sticky" TWA manifest values correspond to "immersive" and "sticky-immersive"
    AndroidManifest values.
  -->
  

  <!--
    This variable below expresses the relationship between the app and the site,
    as documented in the TWA documentation at
    https://developers.google.com/web/updates/2017/10/using-twa#set_up_digital_asset_links_in_an_android_app
    and is injected into the AndroidManifest.xml
  -->
  <string name="assetStatements">
    [{
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
            \"namespace\": \"web\",
            \"site\": \"https://solhunt.dev\"
        }
    }]
    
  </string>  
    
    <!-- Android App Shortcuts (TWA) -->
    <string name="shortcut_scan_short">Scan</string>
    <string name="shortcut_scan_long">Scan Wallet for Recoverable SOL</string>
    <string name="shortcut_preview_short">Preview</string>
    <string name="shortcut_preview_long">Preview Recovery Options</string>
    <string name="shortcut_revoke_short">Revoke</string>
    <string name="shortcut_revoke_long">Revoke Token Approvals</string>
    <string name="shortcut_reclaim_short">Rent</string>
    <string name="shortcut_reclaim_long">Reclaim Rent from Accounts</string>
    <string name="shortcut_lp_fees_short">LP Fee Harvester</string>
    <string name="shortcut_lp_fees_long">Open LP Fee Harvester</string>
    <string name="shortcut_fleet_short">Fleet</string>
    <string name="shortcut_fleet_long">Monitor Agent Wallets</string>
    <string name="shortcut_buffers_short">Buffers</string>
    <string name="shortcut_buffers_long">Recover SOL from Buffer Accounts</string>
    <string name="shortcut_tickets_short">Tickets</string>
    <string name="shortcut_tickets_long">Find Staking Tickets</string>
</resources>
