<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2026 SolHunt. All Rights Reserved.
    Android app shortcuts for TWA quick actions.
-->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scan_wallet"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan"
        android:shortcutShortLabel="@string/shortcut_scan_short"
        android:shortcutLongLabel="@string/shortcut_scan_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=scan"
        />
    </shortcut>
    <shortcut
        android:shortcutId="preview_recovery"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_rent"
        android:shortcutShortLabel="@string/shortcut_preview_short"
        android:shortcutLongLabel="@string/shortcut_preview_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=preview"
        />
    </shortcut>
    <shortcut
        android:shortcutId="revoke_approvals"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_revoke"
        android:shortcutShortLabel="@string/shortcut_revoke_short"
        android:shortcutLongLabel="@string/shortcut_revoke_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=revoke"
        />
    </shortcut>
    <shortcut
        android:shortcutId="reclaim_rent"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_rent"
        android:shortcutShortLabel="@string/shortcut_reclaim_short"
        android:shortcutLongLabel="@string/shortcut_reclaim_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=reclaim"
        />
    </shortcut>
    <shortcut
        android:shortcutId="lp_fee_harvester"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_fleet"
        android:shortcutShortLabel="@string/shortcut_lp_fees_short"
        android:shortcutLongLabel="@string/shortcut_lp_fees_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=lp-fees"
        />
    </shortcut>
    <shortcut
        android:shortcutId="buffers"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_rent"
        android:shortcutShortLabel="@string/shortcut_buffers_short"
        android:shortcutLongLabel="@string/shortcut_buffers_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=buffers"
        />
    </shortcut>
    <shortcut
        android:shortcutId="tickets"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan"
        android:shortcutShortLabel="@string/shortcut_tickets_short"
        android:shortcutLongLabel="@string/shortcut_tickets_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=tickets"
        />
    </shortcut>
    <shortcut
        android:shortcutId="fleet_manager"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_fleet"
        android:shortcutShortLabel="@string/shortcut_fleet_short"
        android:shortcutLongLabel="@string/shortcut_fleet_long"
    >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.solhunt.app"
            android:targetClass="dev.solhunt.app.LauncherActivity"
            android:data="https://solhunt.dev/?engine=fleet"
        />
    </shortcut>
</shortcuts>
